# docker-stack

./: .env  .gitignore  .pre-commit-config.yaml  README.md  aerospike.sh  docker-compose.yaml  dragonfly.sh  install_golang.sh  isolated_env.sh  kong-gateway.sh  kong.sh  konga.sh  linux_install.sh  mac_install.sh  mail_server.sh  meilisearch.sh  pgadmin.sh  portainer.yaml  postgresql.sh  prompt.txt  proxy_npm.yaml  redis.sh  render.yaml  sample-prompt.txt  skytable.sh  start-mojo-lang.sh  terminal_config.sh  valkey.sh  zsh_prompt.sh
.githooks/: commit-msg  pre-commit  pre-push
Inventory/: docker-compose.yml
POS/: .env  docker-compose.yml
dev_env/: Dockerfile.devenv.ubuntu
docker-swarm/: baszel.compose.yml  bugsink.compose.yml  dozzle.compose.yml  dpanel.compose.yml  fief-auth.yml  fief.env  komodo.compose.yml  mathesar.compose.yml  meilisearch.compose.yml  nginx-proxy-manager.compose.yml  nginx.yml  pgadmin.compose.yml  portainer.compose.yml  portainer.yaml  postgres-pgadmin.yaml  postgres.compose.yaml  roundcube.compose.yml  syncthing.compose.yml  termix.compose.yml  valkey.compose.yml  valkey.yml  zerofs.compose.yml
tempo/: .env  pyproject.toml
tempo/app/ambulance/: DashBoardAdminviews.py  admin.py  apps.py  models.py  permissions.py  push_notification.py  serializers.py  signals.py  urls.py  validators.py  views.py
tempo/app/ambulance/migrations/: 0001_initial.py  0002_initial.py
tempo/database/ambulance/: models.py
tempo/database/config/: settings.py
tempo/env/: .env.local
tempo/settings/: database.py  env.py  security.py  server.py  services.py
(+86 files in other folders)
